# memento

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  mcp-config-example.json  mcp-config-with-venv.json  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md
src/memento/: __init__.py  index.py  memory.py  search.py  server.py  sync.py  wiki.py
tests/: conftest.py  test_index.py  test_memory.py  test_search.py  test_server.py  test_sync.py  test_wiki.py
