[project]
name = "memento-mcp"
version = "1.0.0"
description = "A zero-config local MCP server for LLM-accessible knowledge storage — inspired by Memento (2000)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Memento Contributors"},
]
keywords = ["mcp", "llm", "memory", "wiki", "knowledge-base", "sqlite", "fts5", "llm-wiki", "ai-agent-memory", "persistent-memory", "coding-agent", "mcp-memory-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
memento = "memento.server:main"

[project.urls]
Homepage = "https://github.com/obekt/memento"
Repository = "https://github.com/obekt/memento"
Issues = "https://github.com/obekt/memento/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memento"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
